Fixed more spacing weirdness

--- a/css/style.css
+++ b/css/style.css
@@ -42,20 +42,21 @@ hr {
     width: 55vw;
     border-radius: 10vw;
     /* For other browsers*/
-    background-color: #9a629c
+    background-color: #9a629c;
     /* NOTE: TEMP COLOR CHANGE SOON*/
 }
 
 .continued {
     border-radius: 5vw;
-    width: 95vw;
+    width: 98vw;
     background: #533554;
     /* margin-top: 45vh; */
     height: 200vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .first-img-para,
@@ -75,7 +76,7 @@ hr {
 }
 
 .first-img {
-    margin-top: 20vh;
+    margin-top: 30vh;
 }
 
 .second-para {
@@ -92,7 +93,8 @@ hr {
     text-align: center;
     position: relative;
     right: 35vw;
-    bottom: -5vh;
+    /* bottom: -10vh; */
+    bottom: -8vh;
     background: linear-gradient(250deg, #5796fa, #d43af0);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -111,7 +113,7 @@ hr {
 }
 
 #second-text-para {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -121,6 +123,9 @@ hr {
     font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 500;
+    position: relative;
+    right: 15vw;
+    top: 2vh;
 }
 
 .first-para {
@@ -132,9 +137,8 @@ hr {
     color: #e08fe3;
     font-size: 1.45vw;
     position: relative;
-    bottom: 35vh;
+    bottom: 20vh;
     right: -1vw;
-    text-wrap: pretty;
     font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 500;
